--- a/syst/SPA/impl/src/app/components/dataset-details/template.html
+++ b/syst/SPA/impl/src/app/components/dataset-details/template.html
@@ -12,10 +12,10 @@
 		</div>							
 	</div>
 	<% if(conector=="CSV") {		
-		if(recordDelimiter = "\r\n")
-			recordDelimiter = "Windows"
-		if(recordDelimiter = "\n") 
-			recordDelimiter = "Unix";
+		if(recordDelimiter == "\n")
+			recordDelimiter = "Unix"
+		else
+			recordDelimiter = "Windows";
 	%>
 	<div>
 		<div class="row">
@@ -38,21 +38,27 @@
 				<h6>Servidor Solr</h6>
 				<h5><%- server.attributes.host || " - " %></h5>
 			</div>
-			<div class="col-sm-6">
+			<div class="col-sm-3">
 				<h6>Core</h6>
 				<h5> <%- location || " - " %> </h5>
-			</div>
-							
-		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<h6>Usuário</h6>
-				<h5> <%- server.attributes.username || " - " %> </h5>
 			</div>
 			<div class="col-sm-3">
 				<h6>Porta HTTP</h6>
 				<h5> <%- server.attributes.port || " - " %> </h5>
 			</div>
+							
+		</div>
+		<div class="row">
+			
+			<div class="col-sm-6">
+				<h6>Raiz</h6>
+				<h5> <%- server.attributes.ftpRoot || " - " %> </h5>
+			</div>
+			<div class="col-sm-3">
+				<h6>Usuário</h6>
+				<h5> <%- server.attributes.username || " - " %> </h5>
+			</div>
+			
 			
 			<div class="col-sm-3">
 				<h6>Porta FTP/SSH</h6>
