--- a/syst/SPA/impl/src/app/components/transaction-operation/template.html
+++ b/syst/SPA/impl/src/app/components/transaction-operation/template.html
@@ -3,7 +3,7 @@
 		<ul class="steps">
 			<li data-target="#simplewizardinwidgetstep1" class="active"><span class="step">1</span>Dados<span class="chevron"></span></li>
 			<li data-target="#simplewizardinwidgetstep2"><span class="step">2</span>Arquivo<span class="chevron"></span></li>			
-			<li data-target="#simplewizardinwidgetstep4"><span class="step">3</span>Relatório<span class="chevron"></span></li>
+			<li data-target="#simplewizardinwidgetstep3"><span class="step">3</span>Relatório<span class="chevron"></span></li>
 		</ul>
 		<div class="actions" id="simplewizardinwidget-actions">
 			<button type="button" class="btn btn-default btn-sm shiny btn-prev "> <i class="fa fa-angle-left"></i>Anterior</button>
@@ -37,9 +37,9 @@
 		
 		
 		<!-- passo 4 -->
-		<div class="step-pane padding-10" id="simplewizardinwidgetstep4">
-			
-			<h5>Relatório de Críticas</h5>
+		<div class="step-pane padding-10" id="simplewizardinwidgetstep3">
+			<h5 class="js-message">Executando transação...</h5>
+			<!--<h5>Relatório de Críticas</h5>
 			
 			<dl class="def_lista">
 				<dt>Campo "Lorem"</dt>
@@ -55,7 +55,7 @@
 				<dd><a href="#">Rever Mapeamento (volta à etapa "Mapeamento")</a></dd>
 				<dd><a href="#">Recarregar Arquivo e Rever Mapeamento (volta à etapa "Arquivo")</a></dd>
 				<dd><a href="#">Prosseguir mesmo com erros (Concluir)</a></dd>
-			</dl>
+			</dl>-->
 			
 		</div>
 		<!-- /passo 4 -->	
