--- a/syst/SPA/impl/src/app/components/dataset-create-update/template.html
+++ b/syst/SPA/impl/src/app/components/dataset-create-update/template.html
@@ -11,9 +11,8 @@
 				<a class="btn btn-default js-cancel">Cancelar</a>									
 				<button class="btn btn-primary js-save" type="button">Salvar</button>
 			</div>
-<% } %>
-
 			<div class="well attached js-main">
+<% } %>
 				<div class="row">
 					<div class="col-sm-6">
 						<div class="form-group simula_validacao">
@@ -44,16 +43,14 @@
 							<label class="control-label" for="line">Separador de linha </label>
 							<select name="line" class="form-control select js-csv-line-separator">
 								<option value="&#14&#10" selected>Windows</option>
-								<option value "&#10">Unix</option>								
+								<option value="&#10">Unix</option>								
 							</select>
-					
-
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="form-group simula_validacao">
 							<label class="control-label" for="field">Separador de campo </label>
-							<input type="text" id="field" class="form-control js-csv-field-separator" value=";">
+							<input type="text" id="field" class="form-control js-csv-field-separator" value="<%- defaults.fieldSeparator %>">
 						</div>
 					</div>												
 				</div>
@@ -67,58 +64,58 @@
 							<div class="form-group">
 								<label class="control-label" for="line">Servidor </label>
 								<input type="text" id="field" class="form-control js-solr-host">
-						
-
 							</div>
 						</div>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							<div class="form-group simula_validacao">
 								<label class="control-label" for="field">Core </label>
 								<input type="text" id="field" class="form-control js-solr-core">
 							</div>
 						</div>
-						<div class="col-sm-2">
-							<div class="form-group simula_validacao">
-								<label class="control-label" for="field">Porta HTTP</label>
-								<input type="number" min="0" max ="65535" id="field" class="form-control js-solr-port" value="80">
-							</div>
-						</div>													
+																		
 					</div>
 					<div class="row">
-						<div class="col-sm-5">
+						<div class="col-sm-3">
 							<div class="form-group">
 								<label class="control-label" for="line">Usuário</label>
-								<input type="text" id="field" class="form-control js-solr-user">
-						
-
+								<input type="text" id="field" class="form-control js-solr-user" value="<%- defaults.username %>">
 							</div>
 						</div>
-						<div class="col-sm-5">
+						<div class="col-sm-3">
 							<div class="form-group simula_validacao">
-								<label class="control-label" for="field">Senha FTP/SSH </label>
-								<input type="password" id="field" class="form-control js-solr-pass">
+								<label class="control-label" for="field">Senha</label>
+								<input type="password" id="field" class="form-control js-solr-pass" value="<%- defaults.password %>">
 							</div>
 						</div>
-						<div class="col-sm-2">
+						<div class="col-sm-3">
+							<div class="form-group simula_validacao">
+								<label class="control-label" for="field">Raiz</label>
+								<input type="text" id="field" class="form-control js-solr-root" value="<%- defaults.ftpRoot %>">
+							</div>
+						</div>															
+					</div>
+					<div class="row">
+						<div class="col-sm-3">
 							<div class="form-group">
 								<label class="control-label" for="line">Porta FTP/SSH</label>
-								<input type="number" min="0" max ="65535" id="field" class="form-control js-solr-ftp" value="22">
-						
-
+								<input type="number" min="0" max ="65535" id="field" class="form-control js-solr-ftp" value="<%- defaults.ftpPort %>">
 							</div>
 						</div>
-						
-																
+						<div class="col-sm-3">
+							<div class="form-group simula_validacao">
+								<label class="control-label" for="field">Porta HTTP</label>
+								<input type="number" min="0" max ="65535" id="field" class="form-control js-solr-port" value="<%- defaults.port %>">
+							</div>
+						</div>	
 					</div>
 				</div>
-		</div>
 
+<% if(options.showHeader) { %>	
+		</div>
 		<div class="well well-sm attached bottom text-right js-header">
 			<a class="btn btn-default js-cancel">Cancelar</a>									
 			<button class="btn btn-primary js-save" type="button">Salvar</button>
-		</div>										
-		
-<% if(options.showHeader) { %>		
+		</div>	
 		</div>
 	</div>
 <% }  %>
