--- a/syst/SPA/impl/src/app/components/transaction-details/template.html
+++ b/syst/SPA/impl/src/app/components/transaction-details/template.html
@@ -25,14 +25,14 @@
 </div>		
 <!-- /destino -->
 
-<!-- mapeamento -->
+<!-- mapeamento 
 <h6><strong>Mapeamento</strong></h6>
 <hr class="no-margin">
 <h5>Mapeamento 01</h5>
 <div class="js-mapping-el">
 	
 </div>
-<!-- /mapeamento -->					
+ /mapeamento -->					
 
 		
 </script>
