--- a/syst/SPA/impl/src/app/components/transaction-tabs/template.html
+++ b/syst/SPA/impl/src/app/components/transaction-tabs/template.html
@@ -3,20 +3,20 @@
 							
 		<!-- nav-tabs -->
 		<ul class="nav nav-tabs">
-			<li class="active">
-				<a data-toggle="tab" href="#favoritos" aria-expanded="true">
+			<li class="active js-filter js-filter-favorite">
+				<a data-toggle="tab" href="#" aria-expanded="true">
 					Favoritos
 				</a>
 			</li>
 
-			<li class="">
-				<a data-toggle="tab" href="#recentes" aria-expanded="false">
+			<li class="js-filter js-filter-recent">
+				<a data-toggle="tab"  href="#" aria-expanded="false">
 					Recentes
 				</a>
 			</li>
 			
-			<li class="">
-				<a data-toggle="tab" href="#todos" aria-expanded="false">
+			<li class="js-filter js-filter-all">
+				<a data-toggle="tab"  href="#" aria-expanded="false">
 					Todos
 				</a>
 			</li>										
@@ -27,30 +27,13 @@
 		<div class="tab-content">
 		
 			<!-- favoritos -->
-			<div id="favoritos" class="tab-pane active js-favorite-el">
+			<div class="tab-pane active js-list-el">
 				
 				
 				
 			</div>
-			<!-- /favoritos -->
-			
-			
-			<!-- recentes -->
-			<div id="recentes" class="tab-pane js-recent-el">
-
-				
-				
-			</div>
-			<!-- /recentes -->
-			
-			
-			<!-- todos -->
-			<div id="todos" class="tab-pane js-all-el">
-
-		
-				
-			</div>
-			<!-- /todos -->										
+			<!-- /favoritos -->			
+											
 			
 		</div>
 		<!-- /tab-content -->
