--- a/syst/SPA/impl/src/app/components/dataset-details/template.html
+++ b/syst/SPA/impl/src/app/components/dataset-details/template.html
@@ -2,12 +2,12 @@
 
 	
 	<div class="row">
-		<div class="col-sm-6">
-			<h6>Nome</h6>
+		<div class="col-sm-4 col-xs-6">
+			<h5><small>Nome</small></h5>
 			<h5> <%- name %> </h5>
 		</div>
-		<div class="col-sm-6">
-			<h6>Conector</h6>
+		<div class="col-sm-4 col-xs-6">
+			<h5><small>Conector</small></h5>
 			<h5><%- conector %></h5>
 		</div>							
 	</div>
@@ -19,53 +19,100 @@
 	%>
 	<div>
 		<div class="row">
-			<div class="col-sm-6">
-				<h6>Separador de linha</h6>
+			<div class="col-sm-4 col-xs-6">
+				<h5><small>Separador de linha</small></h5>
 				<h5><%-  recordDelimiter %></h5>
 			</div>
-			<div class="col-sm-6">
-				<h6>Separador de campo</h6>
+			<div class="col-sm-4 col-xs-6">
+				<h5><small>Separador de campo</small></h5>
 				<h5><%-   fieldDelimiter %> </h5>
 			</div>					
 		</div>		
 	</div>	
 	<% } %>
 
+	<% if(conector=="Excel") { %>
+	<div>
+		<div class="row">
+			<div class="col-sm-4 col-xs-6">
+				<h5><small>Planilha</small></h5>
+				<h5><%-  sheet || " - " %></h5>
+			</div>
+							
+		</div>		
+	</div>	
+	<% } %>
+
+
 	<% if(conector=="Solr") { %>
 	<div>
 		<div class="row">
-			<div class="col-sm-6">
-				<h6>Servidor Solr</h6>
+			<div class="col-sm-4 col-xs-6">
+				<h5><small>Servidor Solr</small></h5>
 				<h5><%- host || " - " %></h5>
 			</div>
-			<div class="col-sm-3">
-				<h6>Core</h6>
+			<div class="col-sm-4 col-xs-6">
+				<h5><small>Core</small></h5>
 				<h5> <%- location || " - " %> </h5>
 			</div>
-			<div class="col-sm-3">
-				<h6>Porta HTTP</h6>
+			<div class="col-sm-4 col-xs-6">
+				<h5><small>Porta HTTP</small></h5>
 				<h5> <%- port || " - " %> </h5>
 			</div>
 							
 		</div>
 		<div class="row">
 			
-			<div class="col-sm-6">
-				<h6>Raiz</h6>
+			<div class="col-sm-4 col-xs-6">
+				<h5><small>Raiz</small></h5>
 				<h5> <%- ftpRoot || " - " %> </h5>
 			</div>
-			<div class="col-sm-3">
-				<h6>Usuário</h6>
+			<div class="col-sm-4 col-xs-6">
+				<h5><small>Usuário</small></h5>
 				<h5> <%- username || " - " %> </h5>
 			</div>
 			
 			
-			<div class="col-sm-3">
-				<h6>Porta FTP/SSH</h6>
+			<div class="col-sm-4 col-xs-6">
+				<h5><small>Porta FTP/SSH</small></h5>
 				<h5> <%- ftpPort || " - " %> </h5>
 			</div>					
 		</div>	
 	</div>
 	<% } %>
+
+
+	<% if(conector=="SQL") { %>
+	<div>
+		<div class="row">
+			<div class="col-sm-4 col-xs-6">
+				<h5><small>Servidor</small></h5>
+				<h5><%- host || " - " %></h5>
+			</div>
+			<div class="col-sm-4 col-xs-6">
+				<h5><small>Banco</small></h5>
+				<h5> <%- db || " - " %> </h5>
+			</div>
+			<div class="col-sm-4 col-xs-6">
+				<h5><small>Tabela</small></h5>
+				<h5> <%- location || " - " %> </h5>
+			</div>
+							
+		</div>
+		<div class="row">
+			<div class="col-sm-4 col-xs-6">
+				<h5><small>Usuário</small></h5>
+				<h5><%- username || " - " %></h5>
+			</div>
+			<div class="col-sm-4 col-xs-6">
+				<h5><small>Driver</small></h5>
+				<h5> <%- driver || " - " %> </h5>
+			</div>									
+		</div>		
+	</div>
+	<% } %>
+
+
+
 
 </script>
