--- a/syst/SPA/impl/bin/standalone/app/components/transaction-operation/template.html
+++ b/syst/SPA/impl/bin/standalone/app/components/transaction-operation/template.html
@@ -28,7 +28,7 @@
 		<!-- passo 2 -->
 		<div class="step-pane padding-10" id="simplewizardinwidgetstep2">
 
-				<div class="js-file-upload-el">
+				<div class="js-upload-schema-el">
 				</div>
 
 		</div>
